--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# This workflow will do a clean install of node dependencies using Yarn, build the source code, and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: GitHub Pages deploy
@@ -14,20 +14,21 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-      - name: Use Node.js 14.x
+      - name: Use Node.js 14.x and configure Yarn 📦
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-
-      - name: Installing my packages
-        run: npm ci
+      - name: Install Yarn
+        run: npm install -g yarn
+      - name: Installing my packages with Yarn
+        run: yarn install
 
       - name: Build / Generate my App
-        run: npm run generate && touch ./.output/.nojekyll # Must be NPM generate
+        run: yarn generate && touch ./.output/.nojekyll # Must be Yarn generate
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to and GitHub takes gh-pages
-          FOLDER: .output/public # The folder the action should deploy nuxt to .output/public
+          BRANCH: gh-pages # The branch the action should deploy to, and GitHub takes gh-pages
+          FOLDER: .output/public # The folder the action should deploy Nuxt to .output/public
