--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 🛎️
+      - name: Checkouts 🛎️
         uses: actions/checkout@v2.3.1
       - name: Use Node.js 16.x and configure Yarn 📦
         uses: actions/setup-node@v1
