--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d dist"
-  },
-  "devDependencies": {
-    "nuxt": "^3.9.3",
-    "vite-plugin-vuetify": "^2.0.1",
-    "vue": "^3.4.14",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.4.11"
-  },
-  "dependencies": {
-    "@mdi/font": "^7.4.47",
-    "gh-pages": "^6.1.1"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "deploy": "gh-pages -d dist",
+        "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+        "lint:prettier": "prettier --check .",
+        "lint": "yarn lint:js && yarn lint:prettier",
+        "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    },
+    "devDependencies": {
+        "@nuxtjs/eslint-config-typescript": "^12.1.0",
+        "@typescript-eslint/parser": "^6.19.0",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "nuxt": "^3.9.3",
+        "typescript": "^5.3.3",
+        "vite-plugin-vuetify": "^2.0.1",
+        "vue": "^3.4.14",
+        "vue-router": "^4.2.5",
+        "vuetify": "^3.4.11"
+    },
+    "dependencies": {
+        "@mdi/font": "^7.4.47",
+        "axios": "^1.6.5",
+        "gh-pages": "^6.1.1",
+        "prettier": "^3.2.4"
+    }
 }
