--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.3.0",
     "nuxt": "^3.9.3",
     "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.4.14",
