--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.5.1",
     "gh-pages": "^6.1.1",
+    "pinia": "^2.1.7",
     "sass": "^1.70.0"
   }
 }
