--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.6.7",
     "gh-pages": "^6.1.1",
     "pinia": "^2.1.7",
     "sass": "^1.70.0"
